# supercomp

./: .gitignore
material/aulas/05-heuristicas/: CMakeLists.txt
material/aulas/05-heuristicas/lib/aula05/: heuristics.cpp  heuristics.hpp
material/aulas/05-heuristicas/src/: main.cpp
